# offline-assistant-embeddedai

./: jarvis.py  main.py  pyproject.toml
assistant/: cli.py  executor.py  parser.py  speech_to_text.py  wake_word.py
